city kabob. images, index

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a>Menu</a>
         <!-- <label for="search">Search</label> -->
         <a><i class="fa fa-phone-square" aria-hidden="true"></i>&nbsp;&nbsp;(408) 732-0013</a>
-        <input id="search" type="search" placeholder="Search food item">
+        <!-- <input id="search" type="search" placeholder="Search food item"> -->
       </div>
     </div>
 
