--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <a>Menu</a>
         <!-- <label for="search">Search</label> -->
         <a><i class="fa fa-phone-square" aria-hidden="true"></i>&nbsp;&nbsp;(408) 732-0013</a>
+        <a><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;&nbsp;755 South Mathilda Avenue, Sunnyvale, CA 94087</a>
         <!-- <input id="search" type="search" placeholder="Search food item"> -->
       </div>
     </div>
@@ -44,96 +45,84 @@
       <li>
         <img src="images/all_combo_kabob-18.99.jpg">
         <div class="resource_info">
-          <h2>Cardboard Tag Template</h2>
-          <a href="#" class="button">View Resource</a>
+          <h2>All Combo Kabob</h2>
           <p class="price">$18.99</p>
         </div>
       </li>
       <li>
         <img src="images/beef_shish_kabob-10.99.jpg">
         <div class="resource_info">
-          <h2>Cardboard Tag Template</h2>
-          <a href="#" class="button">View Resource</a>
+          <h2>Beef Shish Kabob</h2>
           <p class="price">$10.99</p>
         </div>
       </li>
       <li>
         <img src="images/beef_wrap-6.99.jpg">
         <div class="resource_info">
-          <h2>Cardboard Tag Template</h2>
-          <a href="#" class="button">View Resource</a>
+          <h2>Beef Wrap</h2>
           <p class="price">$6.99</p>
         </div>
       </li>
       <li>
         <img src="images/chicken_kabob-10.99.jpg">
         <div class="resource_info">
-          <h2>Cardboard Tag Template</h2>
-          <a href="#" class="button">View Resource</a>
+          <h2>Chicken Kabob</h2>
           <p class="price">$10.99</p>
         </div>
       </li>
       <li>
         <img src="images/chicken_wrap-6.99.jpg">
         <div class="resource_info">
-          <h2>Cardboard Tag Template</h2>
-          <a href="#" class="button">View Resource</a>
+          <h2>Chicken Wrap</h2>
           <p class="price">$6.99</p>
         </div>
       </li>
       <li>
         <img src="images/combo_chicken_kabob-13.99.jpg">
         <div class="resource_info">
-          <h2>Cardboard Tag Template</h2>
-          <a href="#" class="button">View Resource</a>
+          <h2>Combo Chicken Kabob</h2>
           <p class="price">$13.99</p>
         </div>
       </li>
       <li>
         <img src="images/combo_lamb_kabob-14.99.jpg">
         <div class="resource_info">
-          <h2>Cardboard Tag Template</h2>
-          <a href="#" class="button">View Resource</a>
+          <h2>Combo Lamb Kabob</h2>
           <p class="price">$14.99</p>
         </div>
       </li>
       <li>
         <img src="images/ghemieh_veggie_stew-7.99.jpg">
         <div class="resource_info">
-          <h2>Cardboard Tag Template</h2>
-          <a href="#" class="button">View Resource</a>
+          <h2>Ghemieh Veggie Stew</h2>
           <p class="price">$7.99</p>
         </div>
       </li>
       <li>
         <img src="images/lamb_kabob-11.99.jpg">
         <div class="resource_info">
-          <h2>Cardboard Tag Template</h2>
-          <a href="#" class="button">View Resource</a>
+          <h2>Lamb Kabob</h2>
           <p class="price">$11.99</p>
         </div>
       </li>
       <li>
         <img src="images/mirza_ghasemi_eggplant_dish-8.99.jpg">
         <div class="resource_info">
-          <h2>Cardboard Tag Template</h2>
-          <a href="#" class="button">View Resource</a>
+          <h2>Mirza Ghasemi Eggplant Dish</h2>
           <p class="price">$8.99</p>
         </div>
       </li>
       <li>
         <img src="images/two_koobideh_kabobs-10.99.jpg">
         <div class="resource_info">
-          <h2>Cardboard Tag Template</h2>
-          <a href="#" class="button">View Resource</a>
+          <h2>Two Koobideh Kabobs</h2>
           <p class="price">$10.99</p>
         </div>
       </li>
       <li>
         <img src="images/baklava.jpg">
         <div class="resource_info">
-          <h2>Cardboard Tag Template</h2>
-          <a href="#" class="button">View Resource</a>
+          <h2>Baklava</h2>
           <p class="price">$10.99</p>
         </div>
       </li>
