--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <img src="images/all_combo_kabob-18.99.jpg">
         <div class="resource_info">
           <h2>All Combo Kabob</h2>
+          <p>Combination of one skewer of the marinated chunk of lamb or beef, and a skewer of the boneless, skinless, breast chicken, cooked on an open fire.</p>
           <p class="price">$18.99</p>
         </div>
       </li>
@@ -53,6 +54,7 @@
         <img src="images/beef_shish_kabob-10.99.jpg">
         <div class="resource_info">
           <h2>Beef Shish Kabob</h2>
+          <p>Chunks of beef marinated in a blend of spices and onions, cooked on an open fire.</p>
           <p class="price">$10.99</p>
         </div>
       </li>
@@ -60,6 +62,7 @@
         <img src="images/beef_wrap-6.99.jpg">
         <div class="resource_info">
           <h2>Beef Wrap</h2>
+          <p>One skewer of fresh ground beef mixed with onion, saffron, and a blend of spices, cooked on an open fire.</p>
           <p class="price">$6.99</p>
         </div>
       </li>
@@ -67,6 +70,7 @@
         <img src="images/chicken_kabob-10.99.jpg">
         <div class="resource_info">
           <h2>Chicken Kabob</h2>
+          <p>Boneless, skinless, breast chicken, marinated in saffron, lemon, and other spices, cooked on an open fire.</p>
           <p class="price">$10.99</p>
         </div>
       </li>
@@ -74,6 +78,7 @@
         <img src="images/chicken_wrap-6.99.jpg">
         <div class="resource_info">
           <h2>Chicken Wrap</h2>
+          <p>Marinated boneless, skinless, breast chicken with saffron, cooked on an open fire. (Add $1.00 for Lamb Wrap)</p>
           <p class="price">$6.99</p>
         </div>
       </li>
@@ -81,6 +86,7 @@
         <img src="images/combo_chicken_kabob-13.99.jpg">
         <div class="resource_info">
           <h2>Combo Chicken Kabob</h2>
+          <p>Combination of one skewer of the ground beef kabob (koobideh), and a skewer of the boneless, skinless, breast chicken kabob, cooked on an open fire.</p>
           <p class="price">$13.99</p>
         </div>
       </li>
@@ -88,6 +94,7 @@
         <img src="images/combo_lamb_kabob-14.99.jpg">
         <div class="resource_info">
           <h2>Combo Lamb Kabob</h2>
+          <p>Combination of one skewer of the ground beef (koobideh), and a skewer of the marinated lamb kabob, cooked on an open fire.</p>
           <p class="price">$14.99</p>
         </div>
       </li>
@@ -95,6 +102,7 @@
         <img src="images/ghemieh_veggie_stew-7.99.jpg">
         <div class="resource_info">
           <h2>Ghemieh Veggie Stew</h2>
+          <p>Vegetarian stew of split peas, mushrooms, bell peppers, tomato sauce, and spices. Topped with potato strings and served with basmati rice.</p>
           <p class="price">$7.99</p>
         </div>
       </li>
@@ -102,6 +110,7 @@
         <img src="images/lamb_kabob-11.99.jpg">
         <div class="resource_info">
           <h2>Lamb Kabob</h2>
+          <p>Chunks of lamb marinated in a blend of spices and onions, cooked on an open fire.</p>
           <p class="price">$11.99</p>
         </div>
       </li>
@@ -109,6 +118,7 @@
         <img src="images/mirza_ghasemi_eggplant_dish-8.99.jpg">
         <div class="resource_info">
           <h2>Mirza Ghasemi Eggplant Dish</h2>
+          <p>Grilled eggplant, saut&#233;ed with garlic and spices, stewed in a tomato sauce. Served with basmati rice and topped with a fried egg.</p>
           <p class="price">$8.99</p>
         </div>
       </li>
@@ -116,6 +126,7 @@
         <img src="images/two_koobideh_kabobs-10.99.jpg">
         <div class="resource_info">
           <h2>Two Koobideh Kabobs</h2>
+          <p>Two skewers of fresh ground beef mixed with onion, saffron, and a blend of spices, cooked on an open fire.</p>
           <p class="price">$10.99</p>
         </div>
       </li>
@@ -123,7 +134,8 @@
         <img src="images/baklava.jpg">
         <div class="resource_info">
           <h2>Baklava</h2>
-          <p class="price">$10.99</p>
+          <p>Rich, sweet pastry</p>
+          <p class="price"></p>
         </div>
       </li>
     </ul>
